--- a/flex/05-flex-modal/solution/solution.css
+++ b/flex/05-flex-modal/solution/solution.css
@@ -9,7 +9,7 @@ body {
   margin: 0;
   background: #aaa;
   color: #333;
-  /* I'll give you this one for free */
+  /* I'll give you this one for free lol */
   display: flex;
   align-items: center;
   justify-content: center;
@@ -20,6 +20,7 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  display: flex;
 }
 
 .icon {
@@ -33,6 +34,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-shrink: 0;
 }
 
 .close-button {
@@ -44,8 +46,8 @@ body {
   height: 24px;
   width: 24px;
   display: flex;
-  align-items:center;
-  justify-content:flex-end;
+  align-items: center;
+  justify-content: center;
   border: 1px solid #eee;
   padding: 0;
 }
@@ -60,41 +62,15 @@ button.continue {
   background: royalblue;
   border: 1px solid royalblue;
   color: white;
-  flex-direction: row;
 }
 
 button.cancel {
   background: white;
   border: 1px solid #ddd;
-  color: #4169e1;
-  flex-direction: column;
+  color: royalblue;
 }
-
-/* SOLUTION: */
-
-.modal {
-  display: flex;
-  gap: 16px;
-  padding: 16px;
-}
-
-.icon {
-  /* this keeps the icon from getting smashed by the text */
-  flex-shrink: 0;
-}
-/* header container should be wrapped around the button element as well in order for flex style to work */
 .header {
   display: flex;
-  align-items: center;
   justify-content: space-between;
-  font-size: 18px;
-  font-weight: 700;
-  margin-bottom: 8px;
-}
 
-.text {
-  margin-bottom: 16px;
-}
-.container {
-  display: flex;
 }
