--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -21,6 +21,7 @@ body {
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
   padding: 10px;
+  display: flex;
 }
 
 .icon {
@@ -35,6 +36,7 @@ body {
   align-items: center;
   justify-content: center;
   margin: 0 10px;
+  flex-shrink: 0;
 }
 
 .close-button {
@@ -47,6 +49,7 @@ body {
   width: 24px;
   border: 1px solid #eee;
   padding: 0;
+ 
 }
 
 button {
@@ -65,4 +68,19 @@ button.cancel {
   background: white;
   border: 1px solid #ddd;
   color: royalblue;
+}
+
+.container {
+ 
+}
+
+.header {
+  justify-content: space-between;
+  display: flex;
+  margin-bottom: 15px;
+  font-weight: bolder;
+}
+
+.text {
+  margin-bottom: 10px;
 }
