--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -7,8 +7,8 @@ body {
   font-family: Roboto, sans-serif;
   display: flex;
   flex-direction: column;
-  align-item;
-  background-color: aquamarine;
+  justify-content: space-between;
+ 
 }
 
 img {
@@ -20,23 +20,32 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
+  padding: 8px 16px;
 }
 
 input {
-  border: 1px solid #ddd;
+  border: 1px solid #575454;
   border-radius: 16px;
   padding: 8px 24px;
   width: 400px;
-  margin-bottom: 16px;
+  margin: 16px 0;
 }
 ul {
   list-style-type: none;
+  padding: 5px;
+  display: flex;
+  gap: 5px;
 }
-
+a {
+  text-decoration: none;
+  color: black;
+}
 .content {
   display: flex;
   flex-direction: column;
   align-items: center;
+  gap: 5px;
+  
 }
 
 .input {
@@ -46,5 +55,12 @@ ul {
 .header, .footer {
  display: flex;
  justify-content: space-between;  
- padding: 20px;
+ padding: 1px;
+ 
+ 
+}
+
+.footer {
+  background-color: #eeeeee;
+  align-items: end;
 }
